implemented binary search controller when searching for hashes. fixed bugs in SearchAlgorithm. sortedlist metod now correctly checks that a line written to hashes-text file is 100 byte and is utf-8 char only. Added method to binary searchboth md5 and sha256.